--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -1,5 +1,5 @@
 @import "settings";
-@import "foundation";
+@import "../bower_components/foundation/scss/foundation";
 
 // Or selectively include components
 // @import
