--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -46,31 +46,30 @@
 @media #{$small-up} {
   $red: #c42525;
 
-  html {
-    height: auto; // reset foundation html { height: 100%; } - it breaks slideout mobile menu (page jumps to the top)
-  }
-
   body {
     background: #000; // background for iOS (it's visible when you try to scroll further than content of the page)
     color: #fff;
     font-family: 'Open Sans', sans-serif;
-  }
-
-  #panel {
-    background: #000 url(../img/bg.png) top/contain no-repeat;
-    padding: 5vw; // ### adjust later
-    min-height: 100vh; // fix for too short pages using slideout menu
+    font-size: rem-calc(16);
   }
 
   a {
     text-decoration: none;
   }
 
-  h1 {
+  h1,
+  #logotype {
     font-family: 'Exo';
-    font-size: rem-calc(36);
     font-weight: 400;
     line-height: 1.2;
+  }
+
+  h1 {
+    font-size: rem-calc(20);
+  }
+
+  #logotype {
+    font-size: rem-calc(24);
   }
 
   em {
@@ -82,31 +81,36 @@
     color: #333;
     & a {
       color: #333;
-      transition: color 250ms;
+      text-decoration: underline;
       &:hover {
-        color: $red;
+        text-decoration: none;
       }
     }
   }
 
-  #logo {
-    width: rem-calc(70);
-  }
-
-  #menu {
+  #slideout-menu {
     background: #fff;
     color: $red;
   }
 
+  #slideout-panel {
+    background: #000 url(../img/bg.png) top/contain no-repeat;
+    min-height: 100vh; // fix for too short pages (slideout menu)
+    padding: 5vw;
+  }
+
+  #logo {
+    height: 100%;
+  }
+
   %button {
     color: #fff;
-    font-family: 'Open Sans';
-    font-size: 18px;
+    font-size: rem-calc(14);
     font-weight: 700;
     padding: rem-calc(23) rem-calc(45);
     text-align: center;
     text-transform: uppercase;
-    transition: 250ms; // ## add some timing-function (easing)?
+    transition: background 250ms ease;
   }
 
   .button-filled {
@@ -119,7 +123,7 @@
 
   .button-transparent {
     @extend %button;
-    box-shadow: inset 0 0 0 4px #fff;
+    box-shadow: inset 0 0 0 rem-calc(4) #fff;
     &:hover {
       background: #fff;
       color: #000;
@@ -128,8 +132,55 @@
 }
 
 @media #{$small-only} {
+  html {
+    height: auto; // reset foundation html { height: 100%; } - it breaks slideout mobile menu (page jumps to the top)
+  }
+
+  header {
+    height: rem-calc(50);
+    line-height: rem-calc(50);
+    margin-bottom: 7vw;
+    text-align: center;
+  }
+
+  h1 br {
+    display: none;
+  }
+
   .button-filled,
   .button-transparent {
     display: block;
+    margin-bottom: rem-calc(16);
+  }
+
+  .slideout-toggle {
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: rem-calc(36);
+    height: 100%;
+    width: rem-calc(50);
+  }
+
+  footer p {
+    margin: 0;
+    text-align: center;
+  }
+}
+
+@media #{$medium-up} {
+  .button-filled,
+  .button-transparent {
+    font-size: rem-calc(18);
+  }
+
+  h1,
+  #logotype {
+    font-size: rem-calc(36);
+  }
+
+  #logo {
+    width: rem-calc(70);
   }
 }
