Update slideout.js to v0.1.9 and make it open from right side of screen

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -127,6 +127,10 @@ $red: #c42525;
     }
   }
 
+  .slideout-menu {
+    left: auto !important; // necessary for right side slideout menu
+  }
+
   #logo {
     height: 100%;
   }
