Add welcome-text id

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -210,6 +210,10 @@ $grey: #4d4d4d;
     margin-right: rem-calc(30);
   }
 
+  #welcome-text {
+    width: rem-calc(570);
+  }
+
   .button-filled,
   .button-transparent {
     display: inline-block;
