--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -109,6 +109,7 @@ $grey: #4d4d4d;
     cursor: pointer;
     font-size: rem-calc(36);
     height: 100%;
+    outline: 0;
     width: rem-calc(50);
   }
 
