--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -46,7 +46,8 @@
 
 // Styles for my app
 $red: #c42525;
-$grey: #4d4d4d;
+$dark-grey: #4d4d4d;
+$light-grey: #e9efe8;
 
 @mixin selection-color($txt, $bg) {
   background: $bg;
@@ -107,10 +108,14 @@ $grey: #4d4d4d;
 
   h1 {
     font-size: rem-calc(20);
+    & + p {
+      margin-top: 0;
+    }
   }
 
   #logotype {
     font-size: rem-calc(24);
+    font-weight: 500;
   }
 
   em {
@@ -119,9 +124,9 @@ $grey: #4d4d4d;
   }
 
   footer {
-    color: $grey;
+    color: $dark-grey;
     & a {
-      color: $grey;
+      color: $dark-grey;
       text-decoration: underline;
       &:hover {
         text-decoration: none;
@@ -130,7 +135,7 @@ $grey: #4d4d4d;
   }
 
   main#slideout-panel {
-    background: #e9efe8; // ### adjust later
+    background: $light-grey; // ### adjust later
     min-height: 100vh; // fix for too short pages (slideout menu)
     padding: 5vw;
   }
@@ -167,7 +172,7 @@ $grey: #4d4d4d;
       padding: 5vw;
       &:hover {
         color: #000;
-        background: #fff;
+        background: $light-grey;
       }
     }
   }
@@ -228,8 +233,11 @@ $grey: #4d4d4d;
     text-align: center;
   }
 
-  h1 br {
-    display: none;
+  h1 {
+    margin: rem-calc(24) 0 rem-calc(9);
+    & br {
+      display: none;
+    }
   }
 
   .button-filled,
@@ -251,8 +259,8 @@ $grey: #4d4d4d;
   }
 
   h1 {
-    font-size: rem-calc(32);
-    margin-bottom: rem-calc(16);
+    font-size: rem-calc(27);
+    margin: rem-calc(42) 0 rem-calc(10);
   }
 
   main#slideout-panel {
@@ -290,6 +298,14 @@ $grey: #4d4d4d;
 }
 
 @media #{$large-up} {
+  h1 {
+    font-size: rem-calc(32);
+  }
+
+  #landing-page h1 {
+    margin-top: rem-calc(200);
+  }
+
   main#slideout-panel {
     padding: rem-calc(50);
     padding-bottom: rem-calc(90);
@@ -303,7 +319,7 @@ $grey: #4d4d4d;
       display: inline;
       text-align: center;
       & a {
-        color: $grey;
+        color: $dark-grey;
         font-size: rem-calc(18);
         font-weight: 700;
         text-transform: uppercase;
@@ -313,10 +329,6 @@ $grey: #4d4d4d;
         }
       }
     }
-  }
-
-  #landing-page h1 {
-    margin-top: rem-calc(200);
   }
 
   footer p {
