Change layout of contact page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,16 @@
-<header class="row large-collapse clearfix">
-  <a href="index.html">
-    {% if page.layout == 'index' %}
-      <img src="img/logo_white.svg" id="logo" class="left" alt="Logo Epicentrum">
-    {% else %}
-      <img src="img/logo_black.svg" id="logo" class="left" alt="Logo Epicentrum">
-    {% endif %}
-  </a>
-  <span id="logotype">Epicentrum</span>
-  <button id="slideout-toggle" class="right hide-for-large-up">&#9776;</button>
+<header class="row small-collapse large-uncollapse">
+  <div class="small-12 large-6 columns">
+    <a href="index.html">
+      {% if page.layout == 'index' %}
+        <img src="img/logo_white.svg" id="logo" class="left" alt="Logo Epicentrum">
+      {% else %}
+        <img src="img/logo_black.svg" id="logo" class="left" alt="Logo Epicentrum">
+      {% endif %}
+    </a>
+    <span id="logotype">Epicentrum</span>
+    <button id="slideout-toggle" class="right hide-for-large-up">&#9776;</button>
+  </div>
+
   <nav id="top-menu" class="large-6 columns right hide-for-small-only hide-for-medium-only">
     <ul class="large-block-grid-4">
       {% include nav.html %}
