Add styles to Google Map

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -195,7 +195,7 @@ $light-grey: #e9efe8;
     }
   }
 
-  #map-canvas {
+  #google-map-canvas {
     height: rem-calc(400); // ### adjust later
   }
 
