First draft of about page

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -131,6 +131,10 @@ $light-grey: #e9efe8;
     font-style: normal;
   }
 
+  ol {
+    list-style-type: decimal-leading-zero;
+  }
+
   footer {
     color: $dark-grey;
     & a {
