Delete subpage layout and use default

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,6 @@
 <header class="row small-collapse large-uncollapse">
   <div class="small-12 large-6 columns">
-    <a href="index.html">
-      {% if page.layout == 'index' %}
-        <img src="img/logo_white.svg" id="logo" class="left" alt="Logo Epicentrum">
-      {% else %}
-        <img src="img/logo_black.svg" id="logo" class="left" alt="Logo Epicentrum">
-      {% endif %}
-    </a>
+    <a href="index.html"><img src="img/logo.svg" id="logo" class="left" alt="Logo Epicentrum"></a>
     <span id="logotype">Epicentrum</span>
     <button id="slideout-toggle" class="right hide-for-large-up">&#9776;</button>
   </div>
