--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="row">
-  <p>&copy; 2015 Made with love by <a href="http://rafaltrzop.com/">rafaltrzop.com</a></p>
+  <p>&copy; 2015 Made with love by <a href="http://rafaltrzop.com/" target="_blank">rafaltrzop.com</a></p>
 </footer>
