--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -90,7 +90,7 @@ $grey: #4d4d4d;
     line-height: rem-calc(55);
     overflow: hidden;
     margin-bottom: rem-calc(16) !important; // overwrite margin-bottom: 0 from .row class
-    & a {
+    a {
       color: #fff;
     }
   }
@@ -115,7 +115,7 @@ $grey: #4d4d4d;
 
   h1 {
     font-size: rem-calc(20);
-    & + p {
+    + p {
       margin-top: 0;
     }
   }
@@ -143,7 +143,7 @@ $grey: #4d4d4d;
 
   footer {
     color: $grey;
-    & a {
+    a {
       color: $grey;
       text-decoration: underline;
       &:hover {
@@ -171,12 +171,12 @@ $grey: #4d4d4d;
 
   nav#slideout-menu {
     background: #fff;
-    & ul {
+    ul {
       list-style-type: none;
       margin: 0;
       padding: 0;
     }
-    & a {
+    a {
       color: #000;
       display: block;
       padding: 5vw;
@@ -241,7 +241,7 @@ $grey: #4d4d4d;
 
   h1 {
     margin: rem-calc(9) 0 rem-calc(8);
-    & br {
+    br {
       display: none;
     }
   }
@@ -323,10 +323,10 @@ $grey: #4d4d4d;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    & li {
+    li {
       display: inline;
       text-align: center;
-      & a {
+      a {
         color: $grey;
         font-size: rem-calc(18);
         font-weight: 700;
