--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Epicentrum &mdash; koło naukowe studentów kierunku EPI UJ</title>
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="bower_components/slideout.js/index.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Exo:400,500&subset=latin,latin-ext">
