Add missing slashes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="row small-collapse large-uncollapse">
   <div class="small-12 large-6 columns">
-    <a href="index.html">
-      <img src="img/logo.svg" id="logo" class="left" alt="Logo Epicentrum">
+    <a href="/index.html">
+      <img src="/img/logo.svg" id="logo" class="left" alt="Logo Epicentrum">
       <span id="logotype">Epicentrum</span>
     </a>
     <button id="slideout-toggle" class="right hide-for-large-up">&#9776;</button>
