--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Epicentrum &mdash; koło naukowe studentów kierunku EPI UJ</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="bower_components/slideout.js/index.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/bower_components/slideout.js/index.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Exo:400,500&subset=latin,latin-ext">
-  <script src="bower_components/modernizr/modernizr.js"></script>
+  <script src="/bower_components/modernizr/modernizr.js"></script>
 
   <!-- www.realfavicongenerator.net -->
   <link rel="apple-touch-icon" sizes="57x57" href="/img/favicons/apple-touch-icon-57x57.png">
