--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<li><a href="about.html">O nas</a></li>
-<li><a href="projects.html">Projekty</a></li>
-<li><a href="files.html">Pliki</a></li>
-<li><a href="contact.html">Kontakt</a></li>
+<li><a href="/about.html">O nas</a></li>
+<li><a href="/projects.html">Projekty</a></li>
+<li><a href="/files.html">Pliki</a></li>
+<li><a href="/contact.html">Kontakt</a></li>
