--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
       {% include footer.html %}
     </main>
 
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="bower_components/slideout.js/dist/slideout.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/foundation/js/foundation.min.js"></script>
+    <script src="/bower_components/slideout.js/dist/slideout.min.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
