Change path to index page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="row small-collapse large-uncollapse">
   <div class="small-12 large-6 columns">
-    <a href="/index.html">
+    <a href="/">
       <img src="/img/logo.svg" id="logo" class="left" alt="Logo Epicentrum">
       <span id="logotype">Epicentrum</span>
     </a>
