--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
   <title>Epicentrum &mdash; koło naukowe studentów kierunku EPI UJ</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/bower_components/slideout.js/index.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Exo:400,500&subset=latin,latin-ext">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin,latin-ext">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Exo:400,500&amp;subset=latin,latin-ext">
   <script src="/bower_components/modernizr/modernizr.js"></script>
 
   <!-- www.realfavicongenerator.net -->
